--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,14 @@ body {
 }
 
 .video-container {
-  width: 640px;
-  height: 360px;
+  max-width: 640px;
+  max-height: 360px;
 }
 
 mux-player {
-  height: 360px;
-  width: 640px;
+  aspect-ratio: 16 / 9;
+  height: 100%;
+  width: 100%;
   --seek-live-button: none;
   --seek-backward-button: none;
   --seek-forward-button: none;
